<resources>
    <string name="app_name">BCE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signUp">Create Account</string>
    <string name="welcome">Welcome to Black Cloud Electric</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="active">Active</string>
    <string name="none">None</string>
    <string name="problemDescription">Description</string>
    <string name="contactNumber">Contact Number</string>
    <string name="contactEmail">Contact Email</string>
    <string name="nonEmergency">Non-Emergency</string>
    <string name="emergency">Emergency</string>
    <string name="validAddressDescription">Please Enter Valid Address.</string>
    <string name="validNameDescription">Please Enter Valid Name.</string>
    <string name="validEmailDescription">Please Enter Valid Email.(x@x.x)</string>
    <string name="validPasswordDescription">Your Password Must Include The Following:</string>
    <string name="validPhoneNumberDescription">Please Enter Valid Phone Number (XXXXXXXXXX)</string>
    <string name="requirementLength">Minimum 8 Characters (xxxxxxxx)</string>
    <string name="requirementLowercase">Minimum Lowercase Letter (abc)</string>
    <string name="requirementUppercase">Minimum One Uppercase Letter (ABC)</string>
    <string name="requirementSpecial">Minimum One Special Character ($!@)</string>
    <string name="requirementNumber">Minimum One Number (123)</string>
    <string name="login">Login</string>
    <string name="placeholder">Placeholder</string>
    <string name="numPlaceholder">00</string>
    <string name="account">ACCOUNT</string>
</resources>