<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SignUpFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/whiteSmoke"/>

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:padding="24dp"
            android:background="@color/materialNormalBlue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/signUpLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textAlignment="center"
            android:textSize="16dp"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/welcomeText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressInputLayout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/signUpLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressInputText"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/address" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/validAddressButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_baseline_info_24"
            android:alpha="0.5"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="@id/addressInputLayout"
            app:layout_constraintBottom_toBottomOf="@id/addressInputLayout"
            app:layout_constraintRight_toRightOf="@id/addressInputLayout"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/addressInputLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameInputText"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/firstName"/>
        </com.google.android.material.textfield.TextInputLayout>


        <ImageButton
            android:id="@+id/validFirstNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_baseline_info_24"
            android:alpha="0.5"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="@id/firstNameInputLayout"
            app:layout_constraintBottom_toBottomOf="@id/firstNameInputLayout"
            app:layout_constraintRight_toRightOf="@id/firstNameInputLayout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/firstNameInputLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameInputText"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/validLastNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_baseline_info_24"
            android:alpha="0.5"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="@id/lastNameInputLayout"
            app:layout_constraintBottom_toBottomOf="@id/lastNameInputLayout"
            app:layout_constraintRight_toRightOf="@id/lastNameInputLayout"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/lastNameInputLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNumberInputText"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/validPhoneNumberButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_baseline_info_24"
            android:alpha="0.5"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="@id/phoneNumberInputLayout"
            app:layout_constraintBottom_toBottomOf="@id/phoneNumberInputLayout"
            app:layout_constraintRight_toRightOf="@id/phoneNumberInputLayout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberInputLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInputText"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/validEmailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_baseline_info_24"
            android:alpha="0.5"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="@id/emailInputLayout"
            app:layout_constraintBottom_toBottomOf="@id/emailInputLayout"
            app:layout_constraintRight_toRightOf="@id/emailInputLayout"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInputText"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/validPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_baseline_info_24"
            android:alpha="0.5"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="@id/passwordInputLayout"
            app:layout_constraintBottom_toBottomOf="@id/passwordInputLayout"
            app:layout_constraintRight_toRightOf="@id/passwordInputLayout"/>


        <Button
            android:id="@+id/signUpButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:layout_margin="24dp"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>